--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
-		<title>your title here</title>
-	</head>
+  <head>
+      <title>Nhi's Top 5 Favorite Movies</title>
+  <h1>Nhi's Top 5 Favorite Movies</h1>
+  <body>Something that most people may not know about me is that I <em> LOVE </em> movies. Movies and films have shaped me greatly into the person I am today. There is so much knowledge and wisdom to gain from each and every film. From horror to musicals I have watched them all and this website will compile my favorite films from my 15 years of life. <em> BEWARE SPOILERS AHEAD </em> </body>
 
-	<body>
-		<!-- your content here -->
-	</body>
+
+  <h2>Mama Mia: The Feel Good Musical</h2>
+  <body>Everyone has heard at least one Abba song, whether they realize it or not. From the ridiculously catchy music to the hilarious and sweet tale of discovering yourself this movie is perfect for anyone who enjoys random spurs of singing and dance breaks. The movie starts off by punching the audience with a star-studded cast of familiar faces. We see Meryl Streep from well-known movies like The Iron Lady and Devil Wears Prada, and Amanda Seyfried in popular films such as, Mean girls and Le Miserable. The movie immediately hits us with another "Who's the daddy?" type of situation. We get introduced to the potential fathers, the besties, and the hubby. The plot is pretty slow at first, with everybody not quite sure of the situation happening. Once it kicks closer to Sophie's (the main character of the film) wedding, the tension and excitement kick in. </body>
+   <img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjm1cT-6-bkAhUIWN8KHRoGCGAQjRx6BAgBEAQ&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FMamma_Mia!_(film)&psig=AOvVaw2Q3SND6HxhKAk5yvzMUebW&ust=1569324587896222" height="200px" width="200px" />
+  <h2>Inglorious Bastards: The Tension Builder</h2>
+  <body>Not every day is there a villain created as evil and horrifying as Landa. Of course, there had to be at least 1 Tarantino film on this list. Many were in mind, with a close runner up being Reservoir Dogs (which I highly recommend). The one thing that made this film the one to watch for me was Hans Landa, the Jew Hunter. This movie sets place in a historical fiction version of WW2 Nazis occupied France. The first few minutes of the film would already scare the
 </html>
