--- a/West Side Story.html
+++ b/West Side Story.html
@@ -2,7 +2,10 @@
  <!DOCTYPE html>
 
 <html>
- <head>
+<head>
+    <title>Nhi's Top 5 Favorite Movies</title>s
+</head>
+<body>
    <a href="index.html">Home</a>
      <title> West Side Story </title>
      <a href="West Side Story.html">West Side Story</a>
@@ -10,7 +13,6 @@
      <a href="Taxi Driver.html">Taxi Driver</a>
      <a href="Eternal Sunshine of a Spotless Mind.html">Eternal Sunshine of a Spotless Mind</a>
      <a href="Dead Poets Society.html">Dead Poets Society</a>
-
      <h2>Directory</h2>
      <ol>
      <li><a href="index.html#Resources"</a>Articles About the Importance of Film</li>
@@ -21,15 +23,13 @@
      <li><a href="Dead Poets Society.html"</a> Dead Poets Society</li>
      <li><a href="index.html#Clips"</a>Clips/Analysis of These Films</li>
      </ol>
-
-<body>
  <h3><a name="West Side Story: A Modern Day Romeo and Juliet"> West Side Story: A Modern Day Romeo and Juliet</a></h3>
  <p>Everyone has heard the classic tale of Romeo and Juliet. In this musical rendition taking place 1961 NYC, we see the conflict and tension of race and gangs take the lives of the hopeful youth. We are smitten with the main characters Maria and Tony as they fall in love at first sight. It is a tale that has been told time and time again with young lovers from rival gangs. The film takes the audience on a visual and musical journey that is shot with elegance and beauty that make us feel for both sides of the story. The songs and dance routines throughout this musical leaves the audience wanting more making a great use of the NYC terrain and landscape from the early 60s. This movie is a great film that allows the audience to be engulfed in a beautiful period in time with a tale we all know too well. If you have the patience for random dance breaks this is the perfect film for you.</p>
   <img src="https://image.posterlounge.com/img/products/520000/510030/510030_poster_l.jpg" height="300px" width="200px" />
-</body>
+
 <footer>
 <p> Copyright 2019-2020 </p>
 <p> <a href="https://www.ucvts.tec.nj.us"> UCVTS Website </a> <a href="https://www.ucvts.tec.nj.us/Page/471"> AIT Website </a> </p>
 </footer>
-.
+</body>
 </html>
