--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <html>
  <head>
      <title>Nhi's Top 5 Favorite Movies</title>
+       <link rel="stylesheet" href="Styles/Styles.css" />
+ </head>
 <body>
      <a href="West Side Story.html">West Side Story</a>
      <a href="Inglorious Basterds.html">Inglorious Basterds</a>
@@ -26,7 +28,6 @@
  <li><a href="Eternal Sunshine of a Spotless Mind.html"</a> Eternal Sunshine of the Spotless Mind</li>
  <li><a href="Dead Poets Society.html"</a> Dead Poets Society</li>
  <li><a href="#Clips/Analysis of These Films"</a>Clips/Analysis of These Films</li>
-</body>
   </ol>
   </ul>
   <style>
@@ -53,7 +54,6 @@
        </tr>
    </tbody>
  </table>
-
 <h3 id="Resources"><a name="More Resources on the Importance of Films"> Resources on the Importance of Films</a></h3>
 <ul>
  <li> <a href="https://www.theodysseyonline.com/why-film-is-important-to-me">Why Film Is Important To Me</a></li>
@@ -74,15 +74,9 @@
  <li> <a href="https://youtu.be/BBeBpZ-cPLE">Critics Review of Eternal Sunshine of the Spotless Mind</a></li>
  <li> <a href="https://youtu.be/aQlgiO29QT4">One of The Best Scenes of Dead Poets Society</a><li>
 </ul>
-
 <footer>
 <p> Copyright 2019-2020 </p>
 <p> <a href="https://www.ucvts.tec.nj.us"> UCVTS Website </a> <a href="https://www.ucvts.tec.nj.us/Page/471"> AIT Website </a> </p>
 </footer>
-.
-
-
-
-
-
+</body>
 </html>
