--- a/Inglorious Basterds.html
+++ b/Inglorious Basterds.html
@@ -2,8 +2,10 @@
  <!DOCTYPE html>
 
 <html>
- <head>
-
+<head>
+    <title>Nhi's Top 5 Favorite Movies</title>
+</head>
+<body>
      <a href="index.html">Home</a>
        <title>Inglorious Basterds</title>
        <a href="West Side Story.html">West Side Story</a>
@@ -11,9 +13,6 @@
        <a href="Taxi Driver.html">Taxi Driver</a>
        <a href="Eternal Sunshine of a Spotless Mind.html">Eternal Sunshine of a Spotless Mind</a>
        <a href="Dead Poets Society.html">Dead Poets Society</a>
-
-
-
        <h2>Directory</h2>
        <ol>
        <li><a href="index.html#Resources"</a>Articles About the Importance of Film</li>
@@ -24,19 +23,12 @@
        <li><a href="Dead Poets Society.html"</a> Dead Poets Society</li>
        <li><a href="index.html#Clips"</a>Clips/Analysis of These Films</li>
        </ol>
-
-
-
-<body>
  <h3><a name="Inglorious Bastards: The Tension Builder"> Inglorious Basterds: The Tension Builder</a></h3>
  <p>Not every day is there a villain created as evil and horrifying as Landa. Of course, there had to be at least 1 Tarantino film on this list. Many were in mind, with a close runner up being Reservoir Dogs (which I highly recommend). The one thing that made this film the one to watch for me was Hans Landa, the Jew Hunter. This movie sets place in a historical fiction version of WW2 Nazis occupied France. The first scene of the movie shows how truly great this villain is. The movie introduces us to this villain with us only knowing that he is a nazis officer. With little to no detail of this man, Tarentino already gets us nervous. We learn that Landa is searching for Jews hiding in the farmer’s house and is slowly taking control of the situation with his military power and careful dialogue. The audience learns that that there are in fact Jews hiding right under his feet in the floorboard causing the tension to uproar. The scene takes a cruel turn of events when we see the farmer break in the overwhelming tension. The scene ends with people dead and the audience wondering the true extent of this man’s power. This movie is riddled with intense scenes that leave the audience to constantly question if he knows. The memorable characters and classic Tarentino violence makes this movie one to watch.</p>
  <img src="https://img1.iwascoding.com/4/paid/2018/10/15/ED/B72745B0B2D301366FE9543D7EF8F2C1.jpg" height="300px" Width="200px"/>
-</body>
 <footer>
 <p> Copyright 2019-2020 </p>
 <p> <a href="https://www.ucvts.tec.nj.us"> UCVTS Website </a> <a href="https://www.ucvts.tec.nj.us/Page/471"> AIT Website </a> </p>
 </footer>
-.
-
-
+</body>
 </html>
