--- a/Taxi Driver.html
+++ b/Taxi Driver.html
@@ -2,7 +2,10 @@
  <!DOCTYPE html>
 
 <html>
- <head>
+<head>
+    <title>Nhi's Top 5 Favorite Movies</title>
+</head>
+<body>
 <a href="index.html">Home</a>
 <title>Taxi Driver</title>
 <a href="West Side Story.html">West Side Story</a>
@@ -10,9 +13,6 @@
 <a href="Taxi Driver.html">Taxi Driver</a>
 <a href="Eternal Sunshine of a Spotless Mind.html">Eternal Sunshine of a Spotless Mind</a>
 <a href="Dead Poets Society.html">Dead Poets Society</a>
-
-
-
 <h2>Directory</h2>
 <ol>
 <li><a href="index.html#Resources"</a>Articles About the Importance of Film</li>
@@ -23,17 +23,12 @@
 <li><a href="Dead Poets Society.html"</a> Dead Poets Society</li>
 <li><a href="index.html#Clips"</a>Clips/Analysis of These Films</li>
 </ol>
-
-
-
-<body>
  <h3><a name="Taxi Driver: The Effects of Loneliness"> Taxi Driver: The Effects of Loneliness</a></h3>
 <p>Everyone has felt the effects of loneliness. I remember vividly feeling so during my back surgery in my freshman year of highschool and it affecting my whole mentality in such a painful and difficult manner. This movie shows its effect on a Vietnam vet in a span of 1 hour and 54 minutes. This particular film is an in depth character study, which is not meant for everyone since people can find these boring. The film is shot in the backdrop of the late 70s in NYC with the main character, Travis, being a late night taxi driver suffering from insomnia and an intense case of loneliness. The movie shows the slow crumble of Travis's mental health blurring the lines of sanity and insanity. Serious topics such as child prostitution, racism, and mental illness are brought up in a way that isn't glamorized, but caring of the characters involved. This film will make watchers reevaluate themselves and rethink the world and people around us. Although there is much debate on the meaning and ending of the film, it will be different for everyone who gives it a shot.</p>
 <img src="https://images-na.ssl-images-amazon.com/images/I/51kmhTv7X%2BL.jpg" height="300px" width="200px"/>
-</body>
 <footer>
 <p> Copyright 2019-2020 </p>
 <p> <a href="https://www.ucvts.tec.nj.us"> UCVTS Website </a> <a href="https://www.ucvts.tec.nj.us/Page/471"> AIT Website </a> </p>
 </footer>
-.
+</body>
 </html>
