--- a/West Side Story.html
+++ b/West Side Story.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-    <title>Nhi's Top 5 Favorite Movies</title>s
+    <title>Nhi's Top 5 Favorite Movies</title>
 </head>
 <body>
    <a href="index.html">Home</a>
