--- a/Inglorious Basterds.html
+++ b/Inglorious Basterds.html
@@ -4,6 +4,7 @@
 <html>
 <head>
     <title>Nhi's Top 5 Favorite Movies</title>
+    <link rel="stylesheet" href="Styles/Styles.css" />
 </head>
 <body>
      <a href="index.html">Home</a>
