--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
      <a href="Dead Poets Society.html">Dead Poets Society</a>
  <h1>Nhi's Top 5 Favorite Movies</h1>
  <p>Something that most people may not know about me is that I <em> LOVE </em> movies. Movies and films have shaped me greatly into the person I am today. There is so much knowledge and wisdom to gain from each and every film. From horror to musicals I have watched them all and this website will compile my favorite films from my 15 years of life. <em> BEWARE SPOILERS AHEAD </em> </p>
- <img src="http://www.clker.com/cliparts/a/7/8/5/12284228131842595992schoolfreeware_Movie_Camera.svg.med.png" height="200px" width="200px" />         <img src="https://images.onlinelabels.com/images/clip-art/Stellaris/Stellaris_Clapper-board.png" height="200px" width="200px" />
+ <div class="box">
+ <img src="http://www.clker.com/cliparts/a/7/8/5/12284228131842595992schoolfreeware_Movie_Camera.svg.med.png" height="200px" width="200px" />
+ <img src="https://images.onlinelabels.com/images/clip-art/Stellaris/Stellaris_Clapper-board.png" height="200px" width="200px" />
+ </div>
  <h2>Why is Film Important?</h2>
  <p>Film is more than just a plot or acting. Watching a film is a visual, audio, and sometimes emotional experience. For a few hours, a great film can get you emotionally invested to strangers and unfamiliar places. This emotional connection created between the viewer and a film can impact people in greater ways than first seen. We cry, laugh, and sympathise with these humans and experience a whole different world. One film can take you to a galaxy far far away fighting the evil forces and the next can take you to the harrowing jungles in Vietnam. This does not mean that every film will be good, but great films will always touch a person in a way no other form of art can.</p>
  <a href="https://youtu.be/gm1Hsgop9Bg">
@@ -72,7 +75,7 @@
  <li> <a href="https://youtu.be/Bw6w8WyNdUQ">Quentin's Review of Taxi Driver</a></li>
  <li> <a href="https://youtu.be/91fomjjxEio">Eternal Sunshine and the Point of It</a></li>
  <li> <a href="https://youtu.be/BBeBpZ-cPLE">Critics Review of Eternal Sunshine of the Spotless Mind</a></li>
- <li> <a href="https://youtu.be/aQlgiO29QT4">One of The Best Scenes of Dead Poets Society</a><li>
+ <li> <a href="https://youtu.be/aQlgiO29QT4">One of The Best Scenes in Dead Poets Society</a><li>
 </ul>
 <footer>
 <p> Copyright 2019-2020 </p>
