--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
        <link rel="stylesheet" href="Styles/Styles.css" />
  </head>
 <body>
-  <title>Nhi's top 5 Favorite Movies</title>
 <ol>
-<a href="#Resources" class="button">Resources on the Importance of Films</a>
+<a href="index.html#Resources" class="button">Resources on the Importance of Films</a>
 <a href="West Side Story.html" class="button">West Side Story</a>
 <a href="Inglorious Basterds.html" class="button">Inglorious Basterds</a>
 <a href="Taxi Driver.html" class="button">Taxi Driver</a>
 <a href="Eternal Sunshine of a Spotless Mind.html" class="button">Eternal Sunshine of the Spotless Mind</a>
 <a href="Dead Poets Society.html" class="button">Dead Poets Society</a>
-<a href="#Clips" class="button">Clips/Analysis of These Films</a>
+<a href="index.html#Clips" class="button">Clips/Analysis of These Films</a>
 </ol>
  <h1>Nhi's Top 5 Favorite Movies</h1>
  <p class="dog">Something that most people may not know about me is that I <em> LOVE </em> movies. Movies and films have shaped me greatly into the person I am today. There is so much knowledge and wisdom to gain from each and every film. From horror to musicals I have watched them all and this website will compile my favorite films from my 15 years of life. <em> BEWARE SPOILERS AHEAD! </em> </p>
@@ -67,7 +66,6 @@
  </ul>
  <h3 id="Clips"><a name="Clips/Analysis of These Films"> Clips/Analysis of these Films</a></h3>
 <ul>
-<<<<<<< HEAD
  <li> <a title="cool link"href="https://youtu.be/20myPs_-E1I">West Side Story Dance Clip</a></li>
  <li> <a title="cool link"href="https://youtu.be/aQlgiO29QT4">West Side Story In Depth Analysis</a></li>
  <li> <a title="cool link"href="https://youtu.be/AvtOY0YrF-g">The Suspense in Inglorious Basterds</a></li>
@@ -76,23 +74,11 @@
  <li> <a title="cool link"href="https://youtu.be/Bw6w8WyNdUQ">Quentin's Review of Taxi Driver</a></li>
  <li> <a title="cool link"href="https://youtu.be/91fomjjxEio">Eternal Sunshine and the Point of It</a></li>
  <li> <a title="cool link"href="https://youtu.be/BBeBpZ-cPLE">Critics Review of Eternal Sunshine of the Spotless Mind</a></li>
- <li> <a title="cool link"href="https://youtu.be/aQlgiO29QT4">One of The Best Scenes in Dead Poets Society</a><li>
-=======
- <li> <a href="https://youtu.be/20myPs_-E1I">West Side Story Dance Clip</a></li>
- <li> <a href="https://youtu.be/aQlgiO29QT4">West Side Story In Depth Analysis</a></li>
- <li> <a href="https://youtu.be/AvtOY0YrF-g">The Suspense in Inglorious Basterds</a></li>
- <li> <a
- href="https://youtu.be/-NJW9vsF0aE">Why Landa From Inglorious Basterds is Terrifying</a></li>
- <li> <a href="https://youtu.be/-pAcJ0lFu94">Taxi Driver is More Than What Meets The Eye</a></li>
- <li> <a href="https://youtu.be/Bw6w8WyNdUQ">Quentin's Review of Taxi Driver</a></li>
- <li> <a href="https://youtu.be/91fomjjxEio">Eternal Sunshine and the Point of It</a></li>
- <li> <a href="https://youtu.be/BBeBpZ-cPLE">Critics Review of Eternal Sunshine of the Spotless Mind</a></li>
- <li> <a href="https://youtu.be/aQlgiO29QT4">One of The Best Scenes in Dead Poets Society</a><li>
->>>>>>> b3b13bca210ab0978967aca8b7fba2be164c646c
+ <li> <a title="https://youtu.be/aQlgiO29QT4">One of The Best Scenes in Dead Poets Society</a><li>
 </ul>
 <footer>
 <p> Copyright 2019-2020 </p>
-<p> <a href="https://www.ucvts.tec.nj.us"> UCVTS Website </a> <a href="https://www.ucvts.tec.nj.us/Page/471"> AIT Website </a></p>
+<p> <a href="https://www.ucvts.tec.nj.us"> UCVTS Website </a> <a href="https://www.ucvts.tec.nj.us/Page/471"> AIT Website </a> </p>
 </footer>
 </body>
 </html>
