--- a/Dead Poets Society.html
+++ b/Dead Poets Society.html
@@ -20,7 +20,7 @@
 
  <h3><a name="Dead Poets Society: Being a Teenager"> Dead Poets Society: Being a Teenager</a></h3>
    <p class="dog"> Dead Poets Society is more than a film to me. I recommend this movie to anyone at all. This film explores the pressures of societal expectations of what you should do with yourself and your life, and specifically targeting teenage kids like me. The film builds up all the characters to the point in which I empathize and felt so strongly for these characters to succeed. These characters are teenagers trying to navigate and find their place to belong in life, but are constantly met with difficulty from parents, teachers, and expectations. The teacher who guides them, played by the talented Robin Williams, gives them the options and possibilities to be the best that they can be when the world around them want them to be something they are not. This constant fear of expectations and belonging somewhere is something I face a lot and this movie does such a great job of explaining the depths of it through relatable and memorable characters.</p>
-   <img src="https://m.media-amazon.com/images/M/MV5BOGYwYWNjMzgtNGU4ZC00NWQ2LWEwZjUtMzE1Zjc3NjY3YTU1XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_.jpg" height="300x" width="200x"/>
+   <img id="tooth"src="https://m.media-amazon.com/images/M/MV5BOGYwYWNjMzgtNGU4ZC00NWQ2LWEwZjUtMzE1Zjc3NjY3YTU1XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_.jpg" height="300x" width="200x"/>
 <footer>
 <p> Copyright 2019-2020 </p>
 <p> <a href="https://www.ucvts.tec.nj.us"> UCVTS Website </a> <a href="https://www.ucvts.tec.nj.us/Page/471"> AIT Website </a> </p>
