--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
  <head>
      <title>Nhi's Top 5 Favorite Movies</title>
-       <link rel="stylesheet" href="Styles/Styles.css" />
+       <link rel="stylesheet" href="styles/Styles.css" />
  </head>
 <body>
 <ol>
